--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -1,25 +1,61 @@
 .heading {
-
-  &_big {
-    font-size: 120px;
+  font-weight: 700;
+  //64
+  &_xxl {
+    font-size: 56px;
   }
-
+  //(48) small .85%
   &_xl {
-    font-size: 70px;
+    font-size: 42px;
   }
 
-  &_lg {
-    font-size: 44px;
+  &_h1 {
+    font-size: 36px;
+  }
+
+  &_h2 {
+    font-size: 32px;
+  }
+
+  &_h3 {
+    font-size: 24px;
+  }
+
+  &_h4 {
+    font-size: 22px;
+  }
+  &_h5 {
+    font-size: 18px;
   }
 }
 
-.text{
-  &_huge{
-    font-size: 144px;
-    line-height: .5;
+//---------
+.text {
+  &_xl{
+    font-size: 48px;
   }
-  &_big{
-    font-size: 90px;
+  &_lg{
+    font-size: 36px;
+  }
+  &_md{
+    font-size:22px ;
+  }
+  &-sm{
+    font-size:16px ;
+  }
+
+  &-xs{
+    font-size: 14px;
   }
 }
+//96
+//90
+//48
+//36(42) bold 115%
+//
+//22
+
+
+
+
 
