--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -6,20 +6,19 @@
   font-size: 18px;
   font-weight: 700;
   line-height: 1;
-  padding: 11px 19px;
+  //padding: 11px 19px;
+  border-radius: 100px;
+  min-width: 289px;
+  padding: 25px 10px 26px;
 
   &_main {
-
     color: $white;
-
-    border-radius: 100px;
-    min-width: 289px;
-    padding: 25px 10px 26px;
-
     position: relative;
-    background-clip: padding-box; /* !importanté */
-    border: 1px solid transparent; /* !importanté */
+    background-clip: padding-box;
+    border: 1px solid transparent;
     background-image: linear-gradient(180deg, #F0F83C -10.73%, #2FA02D 118.64%);
+    transition: .5s;
+    transform-style: preserve-3d;
 
     &:before {
       content: '';
@@ -29,17 +28,81 @@
       bottom: 0;
       left: 0;
       z-index: -1;
-      margin: -1px; /* !importanté */
-      border-radius: inherit; /* !importanté */
+      margin: -1px;
+      border-radius: inherit;
       background-image: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100%);
+
+      transform: translateZ(-1px);
     }
 
     &:hover,
     &:focus {
-      //border-color: $warning;
-      //color: $warning;
+      background: $white;
+      border: 1px solid $green;
+      color: $green;
     }
   }
 
+  &_outline {
+    border: 1px solid #3BB239;
+    background-color: #E5E5E5;
+    color: #3BB239;
+
+    &:hover,
+    &:focus {
+      background-color: $white;
+    }
+  }
+
+  &_glass {
+    border: 1px solid #FFFFFF;
+    background-color: transparent;
+    color: #ffffff;
+
+    &:hover,
+    &:focus {
+    }
+  }
+}
+
+.round {
+  border: none;
+  position: relative;
+  border-radius: 50%;
+  width: 80px;
+  height: 80px;
+  background-image: linear-gradient(-270deg, #F0F83C -10.73%, #59CE57 118.64%);
+  cursor: pointer;
+  transition: .35s;
+
+  &:after,
+  &:before {
+    position: absolute;
+    content: '';
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+  &:before {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    z-index: -1;
+    background-image: linear-gradient(-270deg, #F0F83C, #59CE57);
+    opacity: .35;
+  }
+
+  &:after {
+    width: 24px;
+    height: 24px;
+    display: block;
+    background-image: url(../assets/img/svg/plus2.svg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    z-index: 2;
+    transform: translate(-50%, -50%) rotate(45deg);
+  }
 }
 
