--- a/src/scss/components/_slider.scss
+++ b/src/scss/components/_slider.scss
@@ -5,14 +5,31 @@
   z-index: 10;
 }
 .swiper-pagination-bullets .swiper-pagination-bullet{
-  width: 13px;
-  height: 13px;
-  background-color: transparent;
-  //border: 1px solid $warning;
-  margin: 0 7px;
-  opacity: 1;
+  position: relative;
+  width: 14px;
+  height: 14px;
+  background-image: linear-gradient(-270deg, #F0F83C -10.73%, #59CE57 118.64%);
+  opacity: .35;
+  margin: 0 10px!important;
+  transform-style: preserve-3d;
+  &:before{
+    position: absolute;
+    content: '';
+    width: 22px;
+    height: 22px;
+    border-radius: 50%;
+    z-index: -1;
+    background-image: linear-gradient(-270deg, #F0F83C -10.73%, #59CE57 118.64%);
+    opacity: 0;
+    left: 50%;
+    top: 50%;
+    transform: translate3d(-50%,-50%,-1px);
+  }
   &.swiper-pagination-bullet-active{
-    //background-color: $warning;
+    opacity: 1;
+    &:before{
+      opacity: .35;
+    }
   }
 }
 
