--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -1,4 +1,17 @@
 .footer {
+  background-color: #ffffff;
+  &_top{
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 1px solid rgba(134,200,234, .2);
+    .footer_text{
+      max-width: 285px;
+    }
+    .footer-logo{
+      display: block;
+      max-width: 133px;
+    }
+  }
 
   .disclaimer {
     background-size: cover;
