--- a/src/scss/layout/sections/section-help.scss
+++ b/src/scss/layout/sections/section-help.scss
@@ -1,17 +1,27 @@
 .section-help {
   position: relative;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
   padding-top: 160px;
-  padding-bottom: 100px;
-
-  &:before {
+  min-height: 1004px;
+  padding-bottom: 70px;
+  &:before,
+  &:after{
     position: absolute;
     content: '';
     display: block;
     left: 0;
     right: 0;
     bottom: 0;
-    top: 0;
+  }
+  &:before{
     background: linear-gradient(0deg, rgba(37, 163, 229, 0) 0%, #25A3E6 100%);
+    top: 0;
+  }
+  &:after{
+    background-image: linear-gradient(180deg, rgba(228, 242, 255, 0) 5%, #F7FBFF 62%);
+    height: 105px;
   }
 
   .container {
@@ -21,5 +31,174 @@
 
   .section__heading {
     margin-bottom: 80px;
+
+  }
+}
+
+.diagnoses-list {
+  display: flex;
+  align-items: flex-start;
+  margin: 0 -6px;
+  &__item {
+    border-radius: 15px;
+    border: 2px solid $white;
+    width: 25%;
+    margin: 0 6px;
+    padding: 50px 32px;
+    min-height: 184px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    &:first-child .pulse{
+      right: 50%;
+      bottom: 50%;
+    }
+    &:nth-child(2) .pulse{
+      left: 55%;
+      bottom: 40%;
+    }
+    &:nth-child(3) .pulse{
+      left: 35%;
+      bottom: 45%;
+    }
+    &:nth-child(4) .pulse{
+      left: 70%;
+      top: 35%;
+    }
+
+    &:hover,
+    &:focus{
+      min-height: 478px;
+      justify-content: flex-start;
+      .diagnoses-list__thumb{
+        height: 255px;
+        visibility: visible;
+        margin-bottom: 40px;
+        transform: scale(1);
+        opacity: 1;
+        transition: .35s, opacity 1s, transform .8s ;
+      }
+      .wrap-btn{
+        opacity: 1;
+      }
+    }
+  }
+
+  &__thumb {
+    position: relative;
+    height: 0;
+    visibility: hidden;
+    margin-bottom: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    transform: scale(.35);
+    transition: .35s, opacity 1s, transform 1s ;
+    opacity: 0;
+
+    &:before {
+      position: absolute;
+      content: '';
+      left: 0;
+      right: 0;
+      bottom: 0;
+      top: 0;
+      background-image: url(../assets/img/bg-card-diagnose3.png);
+      background-position: center bottom;
+      background-repeat: no-repeat;
+      background-size: cover;
+      z-index: 1;
+    }
+  }
+
+  &__img{
+    animation: rotation 2s infinite linear;
+  }
+
+  &__title {
+    font-weight: 700;
+    font-size: 42px;
+    line-height: .77;
+    text-align: center;
+    color: $white;
+    text-shadow: 0 0 25px rgba(188, 229, 251, 0.75);
+  }
+
+  .wrap-btn{
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translate(-50%, 50%);
+    opacity: 0;
+    transition: opacity .8s;
+  }
+
+  @supports (backdrop-filter: none) {
+    .frosted {
+      background: rgba(255, 255, 255, 0.25);
+      backdrop-filter: blur(10px);
+    }
+  }
+}
+
+.pulse{
+  position: absolute;
+  width: 31px;
+  height: 31px;
+  background: #FFB4AC;
+  border: .2px solid;
+  border-radius: 50%;
+  transform: scale(.1);
+  animation: pulse 1.65s infinite;
+
+  &:before{
+    position: absolute;
+    content: '';
+    width: 17px;
+    height: 17px;
+    background: #FD6A6A;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 50%;
+    border: 5px solid rgba(255, 228,225, .2);
+  }
+}
+
+@keyframes pulse {
+  0% {
+    transform: scale(0.1);
+    box-shadow: 0 0 15px rgba(255, 255, 255, 0);
+    border-color: transparent;
+  }
+
+  50% {
+    transform: scale(1);
+    box-shadow: 0 0 15px rgba(255, 255, 255, 0.85);
+    border-color: $white;
+  }
+  100% {
+    transform: scale(0.1);
+    box-shadow: 0 0 15px rgba(255, 255, 255, 0);
+    border-color: transparent;
+  }
+}
+
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  25% {
+    transform: rotate(5deg);
+  }
+  50% {
+    transform: rotate(0deg);
+  }
+  75% {
+    transform: rotate(-5deg);
+  }
+  100% {
+    transform: rotate(0deg);
   }
 }
