--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -15,6 +15,7 @@
 @import 'components/card-post';
 @import 'components/card-drug';
 @import 'components/types-cystitis';
+@import 'components/card-author';
 
 
 @import 'layout/layout';
