--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -1,9 +1,12 @@
 .footer {
   background-color: #ffffff;
   &_top{
+    position: relative;
     display: flex;
     justify-content: space-between;
+    align-items: flex-end;
     border-bottom: 1px solid rgba(134,200,234, .2);
+    padding: 40px 0 16px;
     .footer_text{
       max-width: 285px;
     }
@@ -11,6 +14,34 @@
       display: block;
       max-width: 133px;
     }
+    .social-bar{
+      display: flex;
+      justify-content: center;
+      position: absolute;
+      bottom: 10px;
+      left: 50%;transform: translateX(-50%);
+      z-index: 1;
+      &__item{
+        width: 24px;
+        height: 24px;
+        display: block;
+        margin-left: 22px;
+        &:first-child{
+          margin-left: 0;
+        }
+        svg{
+          max-width: 100%;
+        }
+      }
+    }
+  }
+  &_bottom{
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 20vh;
+    padding-top: 18px;
+    font-size: 14px;
+    color: $blue-100;
   }
 
   .disclaimer {
