--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -8,7 +8,7 @@
   font-size: 16px;
   color: $black-blue;
 
-  .frosted {
+  .bg_frosted {
     position: relative;
     border: 1px solid $white;
     border-radius: 15px;
@@ -127,7 +127,7 @@
       right: 0;
       top: 0;
       max-width: 380px;
-      width: 100%;
+      width: 80%;
       background-color: #fff;
       min-height: 475px;
       text-align: left;
@@ -143,7 +143,7 @@
         flex-direction: column;
 
         &__item {
-          font-size: 22px;
+          font-size: 18px;
           margin-bottom: 20px;
           padding-left: 0;
           margin-left: 0;
@@ -172,5 +172,4 @@
   opacity: .2;
   z-index: 500;
 }
-
 
