--- a/src/scss/components/card-author.scss
+++ b/src/scss/components/card-author.scss
@@ -1,21 +1,59 @@
 .card-author {
+  display: flex;
+  padding: 20px 10px 38px;
+  background-color: #ffffff;
+  .part_left{
+    width: 20%;
+  }
+  .part_right {
+    width: 80%;
+  }
   &__body {
-    column-count: 2;
+    display: flex;
+    flex-wrap: wrap;
+  }
+  &__header{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
+  }
+  &__img{
+    padding-right: 50px;
+    img{
+      vertical-align: bottom;
+    }
+  }
+  .information {
+    &__label {
+      font-size: 14px;
+      line-height: 1.5;
+      margin-bottom: 4px;
+      color: #999CA0;
+    }
+
+    &__text {
+      font-size: 18px;
+      line-height: 1.3;
+      color: $black-blue;
+      margin-bottom: 30px;
+      p{
+        margin-bottom: 30px;
+        &:last-child{
+          margin-bottom: 0;
+        }
+      }
+    }
+  }
+  .short-description{
+    width: 60%;
+    padding: 0 10px 0 50px;
+
+  }
+  .general-info{
+    width: 40%;
+    padding-right: 10px;
   }
 }
 
 
-.information {
-
-  &__label {
-    font-size: 14px;
-    line-height: 24px;
-    color: #999CA0;
-  }
-
-  &__text {
-    font-size: 18px;
-    line-height: 24px;
-    color: $black-blue;
-  }
-}
