--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -16,6 +16,8 @@
 @import 'components/card-drug';
 @import 'components/types-cystitis';
 @import 'components/card-author';
+@import 'components/prevention__list';
+
 
 
 @import 'layout/layout';
