--- a/src/scss/components/_card-author.scss
+++ b/src/scss/components/_card-author.scss
@@ -16,7 +16,12 @@
     width: 100%;
     display: flex;
     justify-content: space-between;
-    padding: 10px;
+    padding: 10px 0;
+  }
+  .date-of-birth{
+    font-size: 18px;
+    line-height: 22px;
+    color: #878787;
   }
   &__img{
     padding-right: 50px;
