--- a/src/scss/layout/sections/section-reason.scss
+++ b/src/scss/layout/sections/section-reason.scss
@@ -1,4 +1,26 @@
 .section-reason {
+  position: relative;
+  background-color: #F5F7F7;
+  padding: 92px 0 88px;
+
+  &:before {
+    pointer-events: none;
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 5;
+    background: url("../assets/img/svg/reason-bg.svg") center right no-repeat;
+    background-size: 97%;
+  }
+
+  .reason-slider {
+    padding: 2px;
+    overflow: hidden;
+  }
+
   &__heading {
     position: absolute;
     display: flex;
@@ -6,7 +28,8 @@
     align-items: center;
     text-align: center;
     padding: 40px;
-    max-width: 400px;
+    z-index: 5;
+    width: 400px;
     height: 400px;
     border-radius: 50%;
     background: linear-gradient(225deg, #E2E1E6 15.05%, #FFFFFF 73.5%);
@@ -14,9 +37,9 @@
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
-    z-index: 1;
     transform-style: preserve-3d;
-    &:before{
+
+    &:before {
       position: absolute;
       content: '';
       display: block;
@@ -28,6 +51,35 @@
       border-radius: 50%;
       background-image: linear-gradient(180deg, #FFFFFF -0.06%, #E6E6E6 100.06%);
       transform: translateZ(-1px);
+    }
+
+    .circle {
+      position: absolute;
+      z-index: 5;
+      border-radius: 50%;
+      width: 12px;
+      height: 12px;
+      background: linear-gradient(180deg, #F0F83C -10.73%, #59CE57 118.64%);
+
+      &:nth-child(1) {
+        top: 15px;
+        left: 35px;
+      }
+
+      &:nth-child(2) {
+        left: 35px;
+        bottom: 15px;
+      }
+
+      &:nth-child(3) {
+        right: 35px;
+        top: 15px;
+      }
+
+      &:nth-child(4) {
+        right: 35px;
+        bottom: 15px;
+      }
     }
 
     .text_uppercase {
@@ -44,19 +96,6 @@
 
   .part {
     width: 40%;
-    &_left{
-      background: rosybrown;
-    }
-    &_right{
-      background: turquoise;
-    }
-  }
-
-  .part_center {
-    height: 100%;
-    padding-left: 20%;
-    width: 20%;
-    background: palevioletred;
   }
 }
 
@@ -65,12 +104,14 @@
   max-width: 1148px;
   margin: 0 auto;
   display: flex;
+  justify-content: space-between;
+  z-index: 1;
 
   &__item {
     position: relative;
     max-width: 324px;
     width: 100%;
-    background-color: #fff;
+    background-color: #F5F7F7;
     min-height: 200px;
     border-radius: 100px;
     padding: 40px 30px 30px 140px;
@@ -79,13 +120,35 @@
     align-items: center;
 
     background-clip: padding-box;
-    border: 2px solid transparent;
+    border: 3px solid transparent;
 
     font-size: 14px;
     line-height: 17px;
 
     color: #000000;
 
+    & > * {
+      position: relative;
+      z-index: 3;
+    }
+
+    &:last-child:after {
+      display: none;
+    }
+
+    &:after {
+      border-radius: 50%;
+      content: '';
+      position: absolute;
+      bottom: 0;
+      width: 12px;
+      height: 12px;
+      display: block;
+      border: 3px solid #59CE57;
+      -webkit-transform: translateY(50%);
+      transform: translateY(50%);
+      z-index: 5;
+    }
   }
 
   &__icon {
@@ -109,6 +172,22 @@
     left: 0;
     margin: -2px;
     border-radius: inherit;
+  }
+
+  &__item_1:after {
+    left: 125px;
+  }
+
+  &__item_4:after {
+    right: 125px;
+  }
+
+  &__item_5:after {
+    left: 108px;
+  }
+
+  &__item_2:after {
+    right: 106px;
   }
 
   &__item_1:before {
@@ -142,13 +221,91 @@
   &__item_2 {
     margin-right: auto;
   }
-  &__item_4{
-    margin-right: 70px;
-  }
-  &__item_6,
 
+  &__item_4,
+  &__item_6,
   &__item_3,
   &__item_1 {
-    margin-left: 70px;
+    margin-left: 15.2%;
   }
 }
+
+
+@include respond-to($lg) {
+  .section-reason {
+    &__heading {
+      width: 290px;
+      height: 290px;
+    }
+
+    &__title {
+      font-size: 28px;
+    }
+
+    .reason-list__item {
+      padding-left: 100px;
+    }
+
+    .reason-list__item_5 {
+      margin-left: 12%;
+    }
+
+    .reason-list__icon {
+      display: flex;
+      justify-content: center;
+      width: 60px;
+      height: 85px;
+      left: 18%;
+
+      img {
+        max-height: 100%;
+        width: auto;
+        max-width: 100%;
+      }
+    }
+
+    .reason-list__item_4, .reason-list__item_6, .reason-list__item_3, .reason-list__item_1 {
+      margin-left: 5.25%;
+    }
+  }
+}
+
+
+@include respond-to($md) {
+  .section-reason {
+    .reason-slider {
+      position: relative;
+      max-width: 400px;
+      margin-left: auto;
+      margin-right: auto;
+      padding-bottom: 80px;
+
+      .swiper-pagination {
+        display: block;
+      }
+    }
+  }
+
+  .section-reason__heading {
+    position: relative;
+    left: auto;
+    top: auto;
+    transform: none;
+    width: auto;
+    text-align: center;
+    height: auto;
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
+    background: none;
+
+    &:before {
+      display: none;
+    }
+
+    .circle {
+      display: none;
+    }
+  }
+}
+
