--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -17,6 +17,7 @@
 @import 'components/types-cystitis';
 @import 'components/card-author';
 @import 'components/prevention__list';
+@import 'components/popup';
 
 
 
