--- a/src/scss/pages/blog.scss
+++ b/src/scss/pages/blog.scss
@@ -1,6 +1,6 @@
 .blog {
   padding-bottom: 79px;
-  background-color: #E5E5E5;
+  background-color: #F5F7F7;
   &__header{
     display: flex;
     justify-content: space-between;
