--- a/src/scss/utils/_variables.scss
+++ b/src/scss/utils/_variables.scss
@@ -20,5 +20,6 @@ $xs: '(max-width: 580px)';
 $sm: '(max-width: 767px)';
 $md: '(max-width: 940px)';
 $lg: '(max-width: 1180px)';
+//$xl: '(max-width: 1340px)';
 
 
