--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -4,9 +4,7 @@
   text-align: center;
   transition: .35s;
   font-size: 18px;
-  font-weight: 700;
-  line-height: 1;
-  //padding: 11px 19px;
+  font-family: $main-font;
   border-radius: 100px;
   min-width: 289px;
   padding: 25px 10px 26px;
@@ -88,7 +86,7 @@
     width: 100px;
     height: 100px;
     border-radius: 50%;
-    z-index: -1;
+    z-index: 0;
     background-image: linear-gradient(-270deg, #F0F83C, #59CE57);
     opacity: .35;
   }
