--- a/src/scss/components/_card-author.scss
+++ b/src/scss/components/_card-author.scss
@@ -1,34 +1,44 @@
 .card-author {
   display: flex;
-  padding: 20px 10px 38px;
+  padding: 38px 10px;
   background-color: #ffffff;
-  .part_left{
+  box-shadow: 0 5px 26px rgba(0, 0, 0, 0.06);
+  border-radius: 10px;
+  overflow: hidden;
+  margin-top: 30px;
+  margin-bottom: 66px;
+
+  .part_left {
     width: 20%;
+
+    img {
+      width: 100%;
+    }
   }
+
   .part_right {
     width: 80%;
+    padding-left: 60px;
   }
+
   &__body {
     display: flex;
     flex-wrap: wrap;
   }
-  &__header{
+
+  &__header {
     width: 100%;
     display: flex;
     justify-content: space-between;
-    padding: 10px 0;
+    padding: 20px 0;
   }
-  .date-of-birth{
+
+  .date-of-birth {
     font-size: 18px;
     line-height: 22px;
     color: #878787;
   }
-  &__img{
-    padding-right: 50px;
-    img{
-      vertical-align: bottom;
-    }
-  }
+
   .information {
     &__label {
       font-size: 14px;
@@ -42,23 +52,133 @@
       line-height: 1.3;
       color: $black-blue;
       margin-bottom: 30px;
-      p{
+
+      p {
         margin-bottom: 30px;
-        &:last-child{
+
+        &:last-child {
           margin-bottom: 0;
         }
       }
     }
   }
-  .short-description{
-    width: 60%;
+
+  .short-description {
+    width: 62%;
     padding: 0 10px 0 50px;
 
   }
-  .general-info{
-    width: 40%;
+
+  .general-info {
+    width: 38%;
     padding-right: 10px;
   }
+
+  .contact-info {
+    display: flex;
+
+    &__item {
+      display: block;
+      width: 24px;
+      height: 24px;
+      margin: 0 12px;
+      transition: .35s;
+
+      &:hover, &:focus {
+        svg path {
+          fill: $blue-100;
+        }
+      }
+    }
+
+    &__icon {
+      max-width: 100%;
+      height: auto;
+
+      path {
+        fill: $black-blue;
+      }
+    }
+  }
+}
+
+.authors-blog {
+  .blog__header {
+    margin-bottom: 48px;
+  }
+
+  &__list {
+    margin-bottom: 45px;
+  }
+
+  .card-post_large {
+    .card-post__title {
+      line-height: 1.2;
+      margin-bottom: 4px;
+    }
+
+    .card-post__text {
+      line-height: 1.2;
+    }
+  }
+
+  &__item {
+    display: flex;
+    margin-bottom: 15px;
+
+    &:hover,
+    &:focus {
+      .card-post_large {
+        background-color: #F0F0F0;
+
+        > .card-post__title {
+          color: $blue;
+        }
+      }
+
+      > .post-date {
+        background: linear-gradient(180deg, #F0F83C -10.73%, #59CE57 118.64%);
+      }
+
+      > .authors-blog__link:before {
+        background: linear-gradient(180deg, #F0F83C -10.73%, #59CE57 118.64%);
+      }
+    }
+
+    .post-date {
+      flex-shrink: 0;
+      margin: auto;
+      transition: .35s;
+    }
+
+    .card-post_large {
+      padding: 13px 30px 5px;
+      background-color: transparent;
+      border-radius: 10px;
+      transition: .35s;
+    }
+  }
+
+  &__link {
+    position: relative;
+    display: block;
+    padding-left: 192px;
+    transition: .35s;
+
+    &:before {
+      position: absolute;
+      content: '';
+      top: 50%;
+      left: 90px;
+      transform: translateY(-50%);
+      border-radius: 50%;
+      width: 12px;
+      height: 12px;
+      background-color: $black-blue;
+      z-index: 1;
+    }
+  }
+
 }
 
 
