--- a/src/scss/components/_popup.scss
+++ b/src/scss/components/_popup.scss
@@ -1,3 +1,60 @@
-.popover{
+.popup {
+  background: #ffffff;
+  border-radius: 20px;
+  padding: 54px 90px;
+  max-width: 793px;
+  width: 100%;
+  height: 549px;
+  overflow-y: auto;
 
+  &__title {
+    max-width: 330px;
+    margin-bottom: 28px;
+    font-size: 36px;
+  }
+
+  &__content {
+    max-width: 576px;
+    width: 100%;
+  }
+
+  &__text {
+    font-size: 20px;
+    line-height: 1.2;
+    color: #000000;
+    margin-bottom: 40px;
+
+    p {
+      margin-bottom: 8px;
+
+      &:last-child {
+        margin-bottom: 0;
+      }
+    }
+  }
+
+  &__footer {
+    display: flex;
+
+    .btn {
+      margin-right: 10px;
+      min-width: 245px;
+
+      &:last-child {
+        margin-right: 0;
+      }
+
+      &_outline {
+        background-color: #fff;
+        border: 1px solid $green;
+        color: $green;
+
+        &:hover,
+        &:focus {
+          background-color: $green-100;
+          color: #ffffff;
+        }
+      }
+    }
+  }
 }
