--- a/src/scss/layout/_grid.scss
+++ b/src/scss/layout/_grid.scss
@@ -10,6 +10,10 @@
   //@include respond-to($laptop){
   //  max-width: 1120px;
   //}
+  //@include respond-to($xl){
+  //  max-width: 1280px;
+  //}
+
   @include respond-to($lg){
     max-width: 940px;
   }
