--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -1,5 +1,5 @@
 .header {
-  padding-top: 20px;
+  padding: 20px 15px 0;
   position: fixed;
   background-color: transparent;
   left: 0;
@@ -15,6 +15,7 @@
     padding: 29px 44px;
     overflow: hidden;
     background-color: transparent;
+
     .container-inner {
       position: relative;
       width: 100%;
@@ -92,20 +93,21 @@
 
   .btn-close {
     position: absolute;
-    right: 24px;
-    top: 40px;
-    border: none;
-    background-color: transparent;
     display: none;
-    background-image: url(../assets/img/svg/btnClose.svg);
-    width: 16px;
-    height: 16px;
-    background-repeat: no-repeat;
-    background-position: center center;
-    -webkit-background-size: cover;
-    background-size: cover;
-  }
+    width: 54px;
+    height: 54px;
+    left: -27px;
+    top: 50%;
+    transform: translateY(-50%);
 
+  }
+  .round:before{
+    width: 68px;
+    height: 68px;
+  }
+  .round:after{
+    transform: translate(-50%, -50%) rotate(0deg);
+  }
   &__nav-bar {
     display: none;
   }
@@ -114,6 +116,30 @@
     margin-left: 20px;
   }
 
+  @media all and (max-width: 1340px) {
+    .bg_frosted {
+      padding: 25px 20px;
+    }
+    &__logo {
+      max-width: 135px;
+      padding-right: 20px;
+    }
+    &__logo-site {
+      margin-left: 30px;
+      max-width: 115px;
+    }
+    &__nav {
+      text-align: center;
+    }
+    .menu{
+      font-size: 15px;
+    }
+  }
+  @include respond-to($lg) {
+    .menu{
+      font-size: 14px;
+    }
+  }
   @include respond-to($md) {
 
     .btn-close,
@@ -122,18 +148,14 @@
       display: block;
     }
     &__nav {
-      padding: 40px 37px 40px;
       position: fixed;
       right: 0;
       top: 0;
-      max-width: 380px;
-      width: 80%;
-      background-color: #fff;
-      min-height: 475px;
-      text-align: left;
       transition: transform .5s;
       transform: translateX(100%);
       z-index: 999;
+      padding-left: 34px;
+      background-color: transparent;
 
       &.open {
         transform: translateX(0);
@@ -141,10 +163,9 @@
 
       .menu {
         flex-direction: column;
-
+        font-size: 18px;
         &__item {
-          font-size: 18px;
-          margin-bottom: 20px;
+          margin-bottom: 10px;
           padding-left: 0;
           margin-left: 0;
 
@@ -157,6 +178,39 @@
           }
         }
       }
+
+      .social-list{
+        display: flex;
+        &__item{
+          width: 24px;
+          height: 24px;
+          margin-right: 22px;
+          &:last-child{
+            margin-right: 0;
+          }
+        }
+        &__link {
+          display: block;
+        }
+      }
+      .switch-lang{
+        font-size: 18px;
+        margin-right: 18px;
+        &:last-child{
+          margin-right: 0;
+        }
+      }
+    }
+
+    &__nav-inner {
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      padding: 90px 27px 90px 73px;
+      border-radius: 20px 0 0 20px;
+      background-color: #fff;
+      text-align: left;
     }
   }
 }
@@ -169,7 +223,7 @@
   right: 0;
   bottom: 0;
   background-color: #000;
-  opacity: .2;
+  opacity: .3;
   z-index: 500;
 }
 
