--- a/src/scss/pages/single-article.scss
+++ b/src/scss/pages/single-article.scss
@@ -34,11 +34,22 @@
   }
 
   &__thumb {
+    position: relative;
     width: 100%;
-    display: block;
-    height: auto;
+    padding-top: 42%;
     margin-bottom: 76px;
     border-radius: 10px;
+    img{
+      position: absolute;
+      bottom: 0;
+      right: 0;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%);
+      max-width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
   }
   .card-post__author{
     padding-top: 24px;
