--- a/src/scss/components/_types-cystitis.scss
+++ b/src/scss/components/_types-cystitis.scss
@@ -40,8 +40,68 @@
 
       p {
         margin-bottom: 23px;
+
+        &:last-child {
+          margin-bottom: 0;
+        }
       }
     }
   }
 
+  @include respond-to($sm) {
+    background: none;
+    margin: 0;
+    padding: 0 15px;
+    width: auto;
+    .card-types {
+      position: relative;
+      margin: 0;
+      min-height: 0;
+      height: auto;
+
+      &:before {
+        position: absolute;
+        left: -20px;
+        right: -20px;
+        top: -20px;
+        bottom: -20px;
+        content: '';
+        background-image: url(../assets/img/outline-card-mob.png);
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: 100% 100%;
+        z-index: -1;
+      }
+
+      &:last-child {
+        top: 0;
+      }
+
+      &__content {
+        font-size: 16px;
+      }
+
+      &__title {
+        font-size: 20px;
+        margin-bottom: 28px;
+        min-height: 0;
+
+        br {
+          display: none;
+        }
+      }
+    }
+  }
+}
+.types-slider{
+  .swiper-pagination {
+    display: block;
+  }
+  @include respond-to($sm) {
+      position: relative;
+      padding-bottom: 86px;
+    .swiper-pagination {
+      display: block;
+    }
+  }
 }
