--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -161,28 +161,51 @@ body {
 
 .dynamic-content {
   p {
-    font-size: 16px;
+    font-size: 18px;
+    margin-bottom: 30px;
+  }
+  h1 {
+    font-size: 36px;
+  }
+
+  h2 {
+    font-size: 32px;
+  }
+
+  h3 {
+    font-size: 24px;
+  }
+
+  h4 {
+    font-size: 22px;
+  }
+  h5 {
+    font-size: 18px;
     margin-bottom: 26px;
+  }
+  h6{
+    font-size: 14px;
   }
 
   ul {
     padding-left: 14px;
+    margin-bottom: 38px;
 
     li {
       position: relative;
-      padding-left: 20px;
+      padding-left: 14px;
       line-height: 1.13;
       margin-bottom: 5px;
 
       &:before {
         position: absolute;
         content: '';
-        width: 8px;
-        height: 8px;
+        width: 5px;
+        height: 5px;
         border-radius: 50%;
         background-color: $black-blue;
         left: 0;
-        top: 5%;
+        top: 10px;
         transform: translateY(-50%);
       }
     }
