--- a/src/scss/layout/_grid.scss
+++ b/src/scss/layout/_grid.scss
@@ -4,15 +4,10 @@
   max-width: 1430px;
   padding: 0 15px;
   margin: 0 auto;
-  //@include respond-to($laptop-md){
-  //  max-width: 1240px;
-  //}
-  //@include respond-to($laptop){
-  //  max-width: 1120px;
-  //}
-  //@include respond-to($xl){
-  //  max-width: 1280px;
-  //}
+
+  @include respond-to($xl){
+    max-width: 1280px;
+  }
 
   @include respond-to($lg){
     max-width: 940px;
