--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -40,6 +40,7 @@
 @import 'pages/blog';
 @import 'pages/single-article';
 @import 'pages/page-effectiviness';
+@import 'pages/page-composition';
 @import 'pages/page';
 
 
