--- a/src/scss/pages/page-composition.scss
+++ b/src/scss/pages/page-composition.scss
@@ -25,6 +25,7 @@
 
   .col-4 {
     width: 45%;
+    padding-top: 65px;
     padding-left: 67px;
   }
 
@@ -32,7 +33,48 @@
     width: 56%;
     padding-left: 8%;
   }
-}
+
+  @media all and(max-width: 1340px) {
+    .col-4,
+    .col-8 {
+      width: 50%;
+    }
+    .col-8 {
+      padding-left: 40px;
+    }
+  }
+  @include respond-to($lg) {
+    .col-4 {
+      padding-left: 20px;
+    }
+    .d_flex{
+      justify-content: flex-end;
+    }
+  }
+  @include respond-to($md){
+    background-position: center;
+    .d_flex{
+      flex-wrap: wrap;
+    }
+    .col-4,
+    .col-8{
+      width: 100%;
+      padding-left: 0;
+    }
+    .col-4{
+      padding-top: 10px;
+    }
+    .col-8{
+      padding-top: 70px;
+    }
+  }
+  @include respond-to($xs){
+    .col-4,
+    .col-8{
+      padding-top: 0;
+    }
+  }
+  }
 
 .composition {
   flex-wrap: wrap;
@@ -50,7 +92,9 @@
     box-shadow: 0 0 25px rgba(188, 229, 251, 0.75);
     color: #ffffff;
     padding: 110px 15px 26px;
-
+> * {
+  z-index: 2;
+}
     &:before {
       position: absolute;
       content: '';
@@ -70,7 +114,8 @@
         display: block;
         font-size: 18px;
         font-weight: 400;
-        width: 83%;
+        max-width: 156px;
+        width: 100%;
         margin: 0 auto;
       }
     }
@@ -90,14 +135,13 @@
         right: -28px;
       }
 
-
       .composition__item-title {
         font-size: 36px;
       }
     }
 
     &:nth-child(2) {
-      border-radius: 50px 50px 0 50px;
+      border-radius: 50px 50px 50px 0;
       transform: scale(.67);
       margin-left: -12px;
       margin-top: -60px;
@@ -142,10 +186,44 @@
       }
     }
   }
-  @include respond-to($lg){
-    &__item{
-      height: 190px;
+
+  @include respond-to($lg) {
+    justify-content: flex-end;
+    &__item {
+      &:first-child {
+        padding-left: 44px;
+        &:before{
+          top: -124px;
+          right: -82px;
+          transform: scale(.8);
+        }
+      }
+
+      &:nth-child(2) {
+      &:before{
+        transform: scale(1.3);
+        top: -26px;
+      }
+      }
+      &:nth-child(3){
+        &:before{
+          transform: scale(1.1);
+          top: -16px;
+        }
+      }
+      &:nth-child(4){
+        transform: scale(.9)
+      }
     }
+  }
+  @include respond-to($md){
+    width: 80%;
+    margin: 0 auto;
+    padding-top: 10px;
+  }
+  @include respond-to($xs){
+    display: none;
+
   }
 }
 
@@ -187,12 +265,14 @@
       margin-bottom: 26px;
       color: $blue;
     }
-    .tab-content{
+
+    .tab-content {
       position: absolute;
       top: 0;
       opacity: 0;
       z-index: 1;
-      &.active{
+
+      &.active {
         position: relative;
         opacity: 1;
         transition: opacity .5s ease-in;
@@ -200,4 +280,18 @@
       }
     }
   }
+@include respond-to($xs){
+  &__nav-link{
+    min-width: 110px;
+  }
+  &__content {
+    padding-top: 34px;
+    p{
+      font-size: 16px;
+    }
+    h5{
+      font-size: 16px;
+    }
+  }
+}
 }
