--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -61,6 +61,11 @@
     &:focus {
     }
   }
+
+  @include respond-to($xl){
+    min-width: 225px;
+    padding: 18px 20px 19px;
+  }
 }
 
 .round {
