--- a/src/scss/components/_slider.scss
+++ b/src/scss/components/_slider.scss
@@ -1,5 +1,9 @@
 //swiper pagination-bullets
 
+.swiper-container {
+  overflow: hidden;
+}
+
 .swiper-container-horizontal>.swiper-pagination-bullets {
   bottom: 0;
   z-index: 10;
