--- a/src/scss/layout/sections/consequences.scss
+++ b/src/scss/layout/sections/consequences.scss
@@ -1,5 +1,4 @@
 .consequences {
-  background: linear-gradient(260.08deg, #3DB5F4 48.42%, #25A3E5 98.07%);
   padding-top: 140px;
   padding-bottom: 200px;
   .section__heading {
@@ -44,7 +43,7 @@
     }
     &:before{
       right: -35px;
-      background-color: rgba(255,255,255,.5);
+      //background-color: rgba(255,255,255,.5);
       width: 35px;
       height: 1px;
     }
