--- a/src/scss/layout/sections/section-help.scss
+++ b/src/scss/layout/sections/section-help.scss
@@ -40,19 +40,48 @@
 
 .diagnoses-list {
   display: flex;
-  align-items: flex-start;
+  justify-content: space-between;
   margin: 0 -6px;
 
   &__item {
-    border-radius: 15px;
-    border: 2px solid $white;
-    width: 25%;
+    position: relative;
+    width: calc(25% - 16px);
+    flex-shrink: 0;
     margin: 0 6px;
-    padding: 50px 32px;
-    min-height: 184px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+    padding: 50px 32px 88px;
+
+    &:before {
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      content: '';
+      display: block;
+      width: 100%;
+      height: 184px;
+      border-radius: 15px;
+      border: 2px solid $white;
+      transition:  1s;
+      @extend .frosted;
+    }
+
+    .wrap-btn {
+      bottom: 0;
+      left: 50%;
+      transform: translate(-50%, 50%);
+      position: absolute;
+      z-index: 1;
+      opacity: 0;
+      transition: .5s opacity .25s;
+      max-width: 255px;
+      width: 100%;
+    }
+
+    .btn {
+      display: block;
+      width: 100%;
+      min-width: 0;
+    }
 
     &:first-child .pulse {
       right: 50%;
@@ -74,38 +103,35 @@
       top: 35%;
     }
 
-    &:hover,
-    &:focus {
-      min-height: 478px;
-      justify-content: flex-start;
-
+    &:hover {
+      &:before {
+        height: 100%;
+      }
       .diagnoses-list__thumb {
-        height: 255px;
-        visibility: visible;
-        margin-bottom: 40px;
-        transform: scale(1);
         opacity: 1;
-        transition: .35s, opacity 1s, transform .8s;
       }
 
       .wrap-btn {
         opacity: 1;
+      }
+
+      .text {
+        transform: none;
+        bottom: 88px;
       }
     }
   }
 
   &__thumb {
     position: relative;
-    height: 0;
-    visibility: hidden;
-    margin-bottom: 0;
+    margin-bottom: 23px;
     display: flex;
+    height: 255px;
     justify-content: center;
     align-items: center;
     overflow: hidden;
-    transform: scale(.35);
-    transition: .35s, opacity 1s, transform 1s;
     opacity: 0;
+    transition: opacity .8s;
 
     &:before {
       position: absolute;
@@ -129,40 +155,32 @@
   &__title {
     font-weight: 700;
     font-size: 42px;
+    height: 64px;
     line-height: .77;
-    text-align: center;
     color: $white;
     text-shadow: 0 0 25px rgba(188, 229, 251, 0.75);
+
+    .text {
+      text-align: center;
+      position: absolute;
+      left: 0;
+      right: 0;
+      bottom: calc(100% - 64px);
+      transform: translateY(100%);
+      transition: 1s;
+      height: 64px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      z-index: 2;
+    }
   }
 
-  .wrap-btn {
-    position: absolute;
-    bottom: 0;
-    left: 50%;
-    transform: translate(-50%, 50%);
-    opacity: 0;
-    transition: opacity .8s;
-  }
 
   @supports (backdrop-filter: none) {
     .frosted {
       background: rgba(255, 255, 255, 0.25);
       backdrop-filter: blur(10px);
-    }
-  }
-
-  @include respond-to($xl) {
-    &__item {
-      padding: 25px 16px;
-      min-height: 112px;
-
-      &:hover,
-      &:focus {
-        min-height: 440px;
-      }
-    }
-    &__title {
-      font-size: 33px;
     }
   }
 }
