--- a/src/scss/pages/page-composition.scss
+++ b/src/scss/pages/page-composition.scss
@@ -1,11 +1,27 @@
 .page-composition {
   position: relative;
-  background-image: url(../assets/img/bg-composition.png);
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  z-index: 0;
+  //background-image: url(../assets/img/bg-composition.png);
+  //background-size: cover;
+  //background-position: center;
+  //background-repeat: no-repeat;
+  //z-index: 0;
   padding-bottom: 100px;
+  &:after {
+    content: '';
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    background-image: url(../assets/img/bg-composition.png);
+    background-size: 100% auto;
+    background-position: bottom center;
+    background-repeat: no-repeat;
+    z-index: -1;
+  }
+  .container {
+    position: relative;
+  }
 
   .d_flex {
     justify-content: flex-start;
@@ -20,7 +36,7 @@
     bottom: 0;
     top: 0;
     background: linear-gradient(0deg, rgba(251, 254, 255, 0) 0%, #25A3E5 150%);
-    z-index: -1;
+    z-index: 0;
   }
 
   .col-4 {
@@ -47,34 +63,34 @@
     .col-4 {
       padding-left: 20px;
     }
-    .d_flex{
+    .d_flex {
       justify-content: flex-end;
     }
   }
-  @include respond-to($md){
+  @include respond-to($md) {
     background-position: center;
-    .d_flex{
+    .d_flex {
       flex-wrap: wrap;
     }
     .col-4,
-    .col-8{
+    .col-8 {
       width: 100%;
       padding-left: 0;
     }
-    .col-4{
+    .col-4 {
       padding-top: 10px;
     }
-    .col-8{
+    .col-8 {
       padding-top: 70px;
     }
   }
-  @include respond-to($xs){
+  @include respond-to($xs) {
     .col-4,
-    .col-8{
+    .col-8 {
       padding-top: 0;
     }
   }
-  }
+}
 
 .composition {
   flex-wrap: wrap;
@@ -92,9 +108,11 @@
     box-shadow: 0 0 25px rgba(188, 229, 251, 0.75);
     color: #ffffff;
     padding: 110px 15px 26px;
-> * {
-  z-index: 2;
-}
+
+    > * {
+      z-index: 2;
+    }
+
     &:before {
       position: absolute;
       content: '';
@@ -192,7 +210,8 @@
     &__item {
       &:first-child {
         padding-left: 44px;
-        &:before{
+
+        &:before {
           top: -124px;
           right: -82px;
           transform: scale(.8);
@@ -200,28 +219,32 @@
       }
 
       &:nth-child(2) {
-      &:before{
-        transform: scale(1.3);
-        top: -26px;
+        &:before {
+          transform: scale(1.3);
+          top: -26px;
+        }
       }
-      }
-      &:nth-child(3){
-        &:before{
+
+      &:nth-child(3) {
+        &:before {
           transform: scale(1.1);
           top: -16px;
         }
       }
-      &:nth-child(4){
-        transform: scale(.9)
+
+      &:nth-child(4) {
+        &:before{
+          transform: scale(.9)
+        }
       }
     }
   }
-  @include respond-to($md){
+  @include respond-to($md) {
     width: 80%;
     margin: 0 auto;
     padding-top: 10px;
   }
-  @include respond-to($xs){
+  @include respond-to($xs) {
     display: none;
 
   }
@@ -280,18 +303,21 @@
       }
     }
   }
-@include respond-to($xs){
-  &__nav-link{
-    min-width: 110px;
-  }
-  &__content {
-    padding-top: 34px;
-    p{
-      font-size: 16px;
+
+  @include respond-to($xs) {
+    &__nav-link {
+      min-width: 110px;
     }
-    h5{
-      font-size: 16px;
+    &__content {
+      padding-top: 34px;
+
+      p {
+        font-size: 16px;
+      }
+
+      h5 {
+        font-size: 16px;
+      }
     }
   }
-}
 }
