--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -112,6 +112,7 @@ body {
 
       sup {
         vertical-align: baseline;
+        margin-left: -.35em;
       }
     }
   }
@@ -120,8 +121,8 @@ body {
     font-weight: 700;
     font-size: 38px;
     text-align: right;
-    padding-right: 40px;
-    line-height: .6;
+    padding-right: 1.15em;
+    line-height: .8;
   }
 }
 
