--- a/src/scss/components/_prevention__list.scss
+++ b/src/scss/components/_prevention__list.scss
@@ -1,5 +1,8 @@
 .prevention {
-  background-color: #25A3E5;
+  background-image: url(../assets/img/prevention.jpg);
+  background-repeat: no-repeat;
+  background-position: 0;
+  background-size: cover;
   color: #ffffff;
   padding: 53px 0 70px;
 
